--- a/src/styles/callToAction.css
+++ b/src/styles/callToAction.css
@@ -1,15 +1,17 @@
+
+
 .cardContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   width: 100%;
 }
 
 .card {
   width: 100%;
-  max-width: 90%;
+  max-width: 50%;
   height: 300px;
-  background: #41A6AFff;
+  background: var(--primary200);
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -35,18 +37,27 @@
   justify-content: space-between;
 }
 
+.textBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .span {
   font-size: 10px;
 }
 
 .h1 {
-  font-size: 16px;
+  font-size: 36px;
   font-weight: bold;
+  text-align: center;
 }
 
 .p {
-  font-size: 12px;
+  font-size: 26px;
   font-weight: lighter;
+  text-align: center;
 }
 
 
@@ -56,7 +67,7 @@
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
   padding-block: 0.5rem;
   padding-inline: 1.25rem;
-  background-color: rgb(0 107 179);
+  background-color: var(--primary400);
   border-radius: 9999px;
   display: flex;
   align-items: center;
@@ -79,7 +90,7 @@
 
 .button:hover {
   transform: scale(1.05);
-  border-color: #fff9;
+  border-color: var(--primary300);
 }
 
 .button:hover .icon {
