--- a/src/styles/landingpage.css
+++ b/src/styles/landingpage.css
@@ -101,10 +101,6 @@
   background-position:center; 
 }
 
-/* Media Breakpoints */
-
-
-
 /* ---------- Animation --------------- */
 @keyframes fade {
     0% {
@@ -115,3 +111,13 @@
         opacity: 1;
     }
 }
+
+/* Media Breakpoints */
+
+@media (max-width: 575.98px) {  }
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {  }
+
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {  }
