--- a/src/styles/landingpage.css
+++ b/src/styles/landingpage.css
@@ -97,8 +97,8 @@
 .sectionContainer {
   background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="%23a2d9ff" fill-opacity="1" d="M0,32L34.3,37.3C68.6,43,137,53,206,90.7C274.3,128,343,192,411,186.7C480,181,549,107,617,96C685.7,85,754,139,823,181.3C891.4,224,960,256,1029,240C1097.1,224,1166,160,1234,144C1302.9,128,1371,160,1406,176L1440,192L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>');
   background-size: 300% 100%;     
-  background-repeat: no-repeat round;
-  background-position:center; 
+  background-size: cover;
+  background-position: center center;
 }
 
 /* ---------- Animation --------------- */
