--- a/src/styles/infoSection.css
+++ b/src/styles/infoSection.css
@@ -10,3 +10,25 @@
 .containerText {
   font-size: 80px;
 }
+
+/* Media Breakpoints */
+
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) { 
+  .containerText {
+    font-size: 64px;
+  }
+ }
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) { 
+  .containerText {
+    font-size: 48px;
+  }
+ }
+
+@media (max-width: 575.98px) { 
+  .containerText {
+    font-size: 32px;
+  }
+ }
