getting ready to launch;

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -3,6 +3,15 @@
   padding-bottom: 200px;
 }
 
+.carouselSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.innerContainer {
+  width: 90vw !important;
+}
 
 .carouselTextContainer {
   padding: 50px;
@@ -11,3 +20,18 @@
   box-shadow:  20px 20px 60px #bebebe,
               -20px -20px 60px #ffffff;
 }
+
+/* .carousel-control-next-icon {
+  background-color: red;
+  border-radius: 50px;
+} */
+
+/* Media Breakpoints */
+
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {  }
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {  }
+
+@media (max-width: 575.98px) {  }
