--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -61,6 +61,10 @@
  }
 
  @media (max-width: 575.98px) { 
+  .aboutCard {
+    /* margin-top: 100px;
+    margin-bottom: 100px; */
+  }
   .aboutText {
     font-size: 16px;
   }
