--- a/src/styles/callToAction.css
+++ b/src/styles/callToAction.css
@@ -8,8 +8,8 @@
 }
 
 .card {
-  width: 100%;
-  max-width: 50%;
+  width: 900px;
+  /* max-width: 50%; */
   height: 300px;
   background: var(--primary200);
   border-radius: 20px;
@@ -131,4 +131,36 @@
   }
 }
 
+/* Media Breakpoints */
 
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) { 
+  .card {
+    width: 90%
+  }
+ }
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) { 
+  .h1 {
+    font-size: 32px;
+  }
+  
+  .p {
+    font-size: 24px;
+  }
+ }
+
+@media (max-width: 575.98px) { 
+  .h1 {
+    font-size: 28px;
+  }
+  
+  .p {
+    font-size: 18px;
+  }
+
+  .button {
+    width: 250px;
+  }
+ }
