--- a/src/styles/landingpage.css
+++ b/src/styles/landingpage.css
@@ -33,7 +33,7 @@
 .bg-overlay {
     height: 100%;
     width: 100%;
-    /* background-color: rgba(0,0,0,0.5); */
+    background-color: rgba(0,0,0,0.1);
     position: absolute;
     top: 0;
     z-index: 0;
@@ -118,6 +118,16 @@
 @media (max-width: 991.98px) {  }
 
 /* // Small devices (landscape phones, less than 768px) */
-@media (max-width: 767.98px) {  }
+@media (max-width: 767.98px) { 
+  .home-text p {
+    justify-self: flex-end;
+    font-size: 1.5em;
+  }
+
+  .heroLogo {
+    width: 80vw;
+  }
+
+ }
 
 @media (max-width: 575.98px) {  }
