replaces all videos with compressed versions, removed CRM

--- a/src/styles/landingpage.css
+++ b/src/styles/landingpage.css
@@ -59,6 +59,12 @@
 .home-text p {
     justify-self: flex-end;
     font-size: 2em;
+    text-shadow:
+        0.07em 0 black,
+        0 0.07em black,
+        -0.07em 0 black,
+        0 -0.07em black;
+  
 }
 
 .home-btn {
